Documenting endpoints with swagger
